*Empty MediaWiki Message*

--- a/محمد_موسى_شفيق.mw
+++ b/محمد_موسى_شفيق.mw
@@ -1,6 +1,9 @@
 [[Image:Mohammad MusaShafiq.jpg|left|thumb|300px|اروا ښاد محمد موسى شفيق]]
 
-اروا ښاد محمد موسى شفيق د مولوى محمد ابراهيم كاموى زوي پلارنى ټاټوبى يې ننګرهار ولايت د كامې سيمه ده، خو پخپله په كابل كې چېرې چې پلار يې ډېره موده په دنده بوخت ؤو، په ۱۳۰۸لمريز كال د جوزا په پنځمه نيټه وزېږد. لومړنى زده كړى د كامې او كابل په ښونځيو كې تر سره كړې بيا وروسته د ننګرهار ولايت په نجم المدارس كې داخل شو، دوه كاله وروسته د كابل عربى دار العلوم ته لاړ چېرته چې ئې دولسم ټولګې خلاص او مولوى لوړ منصب یې ترلاسه کړ. له مدرسى وروسته په شاهي دار التحرير كې مقرر شو.
+اروا ښاد محمد موسى شفيق د مولوى محمد ابراهيم كاموى زوي پلارنى ټاټوبى يې ننګرهار ولايت د كامې سيمه ده، خو پخپله په كابل كې چېرې چې پلار يې ډېره موده په دنده بوخت ؤو، په ۱۳۰۸لمريز كال د جوزا په پنځمه نيټه وزېږد.
+
+== زده کړې ==
+لومړنى زده كړى د كامې او كابل په ښونځيو كې تر سره كړې بيا وروسته د ننګرهار ولايت په نجم المدارس كې داخل شو، دوه كاله وروسته د كابل عربى دار العلوم ته لاړ چېرته چې ئې دولسم ټولګې خلاص او مولوى لوړ منصب یې ترلاسه کړ. له مدرسى وروسته په شاهي دار التحرير كې مقرر شو.
 څه موده وروسته د پوهنې وزارت له خوا د لوړو زدكړو د تحصيل لپاره مصر ته ولېږدول شو او هلته ئې په حقوقو كې ماستري تر لاسه كړه چې بيا د امريكى په لورې ولاړ او هلته ئې د بين الدول حقوقو په څانګه كې د نيويارك د كولمبيا پوهنتون څخه ماسترى او نړېوالو مسايلو كې د هاردوارد پوهنتون څخه د برى سند تر لاسه كړه.
 
 
