*Empty MediaWiki Message*

--- a/عبدالبصير_عبرت.mw
+++ b/عبدالبصير_عبرت.mw
@@ -1,4 +1,4 @@
-<font size=" face="Pashto Kror Asiatype">
+{{صاف}}
 ارواښاد عبدالبصير عبرت پر ١٣٥٢ل كال د زابل ولايت، ناوې والسوالۍ په بلبلي كلي كې زېږېدلى دى. له اره د وردګو ولايت د سيداباد ولسوالۍ اوسېدونكى دى، چې پلار او نيكونه يې ډېر كلونه پخوا زابل ولايت ته راكډه شوي او هملته يې استوګنه غوره كړې ده.
 په څوارلس كلنۍ كې يې د پاكستان په يوه ديني مدرسه كې خپلې لومړنۍ زده كړې پيل كړې او بيا يې د همدې هېواد د بېلابېلو سيمو په ديني مدرسو كې درسونه وويل.
 تر څه مودې وروسته بېرته خپل هېواد ته راستون شو؛ يو كال يې تېر كړى نه و چې بېرته پاكستان ته لاړ او يو ځل بيا يې پر ديني زده كړو پيل وكړ، د يوه كال په بهير كې يې قران كريم په بشپړ ډول حفظ كړ.
