*Empty MediaWiki Message*

--- a/ابو_حنيفه_(امام_اعظم).mw
+++ b/ابو_حنيفه_(امام_اعظم).mw
@@ -1,4 +1,4 @@
-<font face="Tahoma">امام اعظم ابو حنيفه نعمان کابلي الاصل <ref>امام اعظم په اصل کې د کابل او د هغه د اصل په باب په ډېرو تاريخي ماخذ تذکرو او مناقبو کې راغلی دی چې مشهور يې دا دي:
+امام اعظم ابو حنيفه نعمان کابلي الاصل <ref>امام اعظم په اصل کې د کابل او د هغه د اصل په باب په ډېرو تاريخي ماخذ تذکرو او مناقبو کې راغلی دی چې مشهور يې دا دي:
 
 *الخېرات الحسان في مناقب الامام الاعظم ابوالحنيفه النعمان: د حجاز د مفتي علامه ابن حجرالهيتمی تاليف: چې په ۹۷۳ هـ کې مړ دی.
 *مناقب الامام ابو حنيفه د ابوالمويدالموفق المکي تاليف چې په ۵۱۸ هـ کې مړ دی
@@ -9,7 +9,7 @@
 *سکةالفضلا: ۱۲ مخ. (نور په ۳۱۸ مخ کې)
 </ref> د ثابت زوی د زوطی لمسی او د ماه کړوسی او د اهل سنت او جماعت له څلورو امامانو څخه يو ستر امام او د اسلامي مشهور تشريعي «حنيفي مذهب» موسس و چې دا مذهب تر اوسه د ده په نامه يادېږي او په دُنيا کې تر نيمو زيات مسلمانان په همدې مذهب دي.
 
-<nowiki>دلته دې بې بڼې متن ځای پر ځای شي</nowiki>== مخينه ==
+== مخينه ==
 امام اعظم په اصل کې د کابل او د هغه د اصل په باب په ډېرو تاريخي ماخذ تذکرو او مناقبو کې راغلی دی.<ref>امام اعظم په اصل کې د کابل او د هغه د اصل په باب په ډېرو تاريخي ماخذ تذکرو او مناقبو کې راغلی دی چې مشهور يې دا دي:
 
 *الخېرات الحسان في مناقب الامام الاعظم ابوالحنيفه النعمان: د حجاز د مفتي علامه ابن حجرالهيتمی تاليف: چې په ۹۷۳ هـ کې مړ دی.
