*Empty MediaWiki Message*

--- a/حکومت.mw
+++ b/حکومت.mw
@@ -1,3 +1,4 @@
+{{نابشپړ}}
 حكومت هغه سازمان دى، چې په يوه ټاكلې سيمه كې د  واك او قانون  نافذولو پوره واك ولري. 
 د حكومت د مفهوم لپاره ډول، ډول تعريفونه شوي دي. چې لدې ډلې څخه يو هم: حكومت د يوه دولت د تصميم نيولو قوت بولي.
 حكومت له درې ډوله قواو   څخه جوړېږي:
