*Empty MediaWiki Message*

--- a/يعقوب_کندي.mw
+++ b/يعقوب_کندي.mw
@@ -1,3 +1,4 @@
+{{نابشپړ}}
 ابو يوسف يعقوب كندي لومړنې مسلمان فيلسفو دى. په سوېلي عربو كې د اوسېدو له وجې په (فيلسوف العرب) باندې هم پېژندل كېږي.
 
 دده د پيداېښت په اړه تاريخ كومه كره نيټه نده ښودلې. خو داسې انګېرل كېږي، چې د نهمې زېږدې پېړۍ په نيمايي كې د كوفې په ښار كې زېږېدلې وي. دا خبره هم مالومه ده، ېچ دې د عباسي واكمن مامون الرشيد په پير كې ژوند كاوه، او د المتوكل باالله تر مړينې هم ژوندې و.
