--- a/رحمت_الله_خوستی.mw
+++ b/رحمت_الله_خوستی.mw
@@ -1,4 +1,4 @@
-'''رحمت الله خوستى''' په ١٣٣٨ کې دخوست مندوزيو دچندړ خيلو په کلي کې زيږيدلى دى . ترپنځم ټولگي پورې يې د څړبن ليسه لوستې ده اوپه ١٣٥٥ کې کابل ته ولاړ.
+{{نابشپړ}}'''رحمت الله خوستى''' په ١٣٣٨ کې دخوست مندوزيو دچندړ خيلو په کلي کې زيږيدلى دى . ترپنځم ټولگي پورې يې د څړبن ليسه لوستې ده اوپه ١٣٥٥ کې کابل ته ولاړ.
 تراتمه پورې يې د شاشهيد ښوونځي ولوست اوبيا يې دکابل د استقلال ليسه پاى ته ورسوله. په ١٣٥٧ کال کې دراډيوافغانستان رسمي مامورشو او اود ممثل په توگه يې کار کاوۀ. د ١٣٥٨ کال په پاى کې دهنر اوادبياتو په څانگه کې د پښتو فلمونو دايرکتر اوممثل وو.
 <br>
 لومړنى فلم يې غوړه مالي وه چې استاد بيسد ليکلى وۀ. وروسته يې ليلکنې هم کولې . ١٧ پښتو فلمونه يې جوړ کړي دي. له راډيو نه په ٥٤ ١٣کال کې ووت اودکورنيو چارو زارت داخله ته ورغې. د تبليغ اوترويج په سياسي څانگه کې وو. 
