--- a/شملي_کوریا.mw
+++ b/شملي_کوریا.mw
@@ -439,6 +439,7 @@ In the spring of 2005, the World Food Program reported that famine conditions we
 [[qu:Chinchay Hansuyu]]
 [[ro:Coreea de Nord]]
 [[ru:Корейская Народно-Демократическая Республика]]
+[[sah:Хоту Кэриэйэ]]
 [[scn:Corea dû Nord]]
 [[se:Davvi-Korea]]
 [[sh:Demokratska Narodna Republika Koreja]]
