*Empty MediaWiki Message*

--- a/پټوډي.mw
+++ b/پټوډي.mw
@@ -1,3 +1,11 @@
 پټوډي د هندوستان په ګورګاون ولسوالۍ، هرياڼا ولايت کې يو ښار (ټاون) دی. دا په تېرو وختونو کې یو شاهي هېواد هم پاتې شوی دی. دا شاهي هېواد په ۱۸۰۶ کې د يو پښتون اتل لخوا، چې فېض طلب خان نومېده، جوړ شوی وو او شاوخوا ۱۳۷ ک.م² سيمه کې پروت وو.
 
 دا هېواد په ۷م اپرېل، ۱۹۴۸ کې د هندوستان سره يوځای کړی شو.
+
+==ځمکپوهنه==
+
+پټوډي په 28.32, 76.78 سيمه کې پروت دی. د سيند د سر څخه شاوخوا ۲۴۰ ميټره لوړ دی.
+
+==وګړيزې خبرتياوې==
+
+د هندوستان د ۲۰۰۱ د سرشمېرنې له مخې پټوډي شاوخوا ۱۶،۰۶۴ تنه اوسېدونکي لري، چې ۵۳٪ وګړي يې نرينه او ۴۷٪ يې ښځينه دي. شاوخوا ۵۷٪ خلکو يې زدکړه کړې ده، چې په هفو کې ۶۵٪ نرينه او ۴۸٪ ښځينه دي. په پټوډي کې شاوخوا ۱۷٪ وګړي د ۶ کالو نه ټيټ عمر لري. 
