--- a/پټوډي.mw
+++ b/پټوډي.mw
@@ -9,3 +9,22 @@
 ==وګړيزې خبرتياوې==
 
 د هندوستان د ۲۰۰۱ د سرشمېرنې له مخې پټوډي شاوخوا ۱۶،۰۶۴ تنه اوسېدونکي لري، چې ۵۳٪ وګړي يې نرينه او ۴۷٪ يې ښځينه دي. شاوخوا ۵۷٪ خلکو يې زدکړه کړې ده، چې په هفو کې ۶۵٪ نرينه او ۴۸٪ ښځينه دي. په پټوډي کې شاوخوا ۱۷٪ وګړي د ۶ کالو نه ټيټ عمر لري. 
+
+Small while the state may have been, its ruling family enjoyed celebrity as cricketers, film stars and socialites. Indeed, two successive Nawabs of Pataudi served as captains of the Indian cricket team. Nawab Iftikhar Ali Khan's younger brother Nawabzada Sher Ali Khan Pataudi, an officer in the British Indian Army migrated to Pakistan where he served as an Ambassador and Cabinet Minister after retiring from the Pakistan army after serving as Chief of Staff of the Pakistan Army. Prominent members of the family include:
+
+==د پټوډي سيمې تاريخ==
+
+که څه هم دا سيمه (هېواد) وړوکی وو، خو د دې سيمې په شاهي کورنۍ کې ډېر مشهور کسان تېر شوي دي، لکه د کرېکېټ لوبغاړي، فلمي لوبګران، او داسې نور.
+د دې کورنۍ دوه تنه د هندوستان د کرېکېټ مشران پاتې شوي دي.
+د نواب افتخار علي خان کشر ورور نوابزاده شېر علي خان پټوډي، چې د برېټانيې په پوځ کې يو افېسر وو، پاکستان ته کډه وکړه او د پاکستان د پوځ مشر پاتې شوی دی.
+
+د دې کورنۍ نوموتي غړي په لاندې ډول دي:
+
+
+* افتخار علي خان پټوډي (د کرېکېټ لوبغاړی)
+* ساجده سلطان (د بهوپال بېګم)
+* نوابزاده شېر علي خان (د پاکستان د پوځ مېجر جنرل)
+* منصور علي خان (د کرېکېټ لوبغاړی)
+* شرميلا ټګور (فلمي لوبګره)
+* سېف علي خان (نوموتی فلمي لوبګر)
+* سوها علي خان (فلمي لوبګره)
