*Empty MediaWiki Message*

--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -52,12 +52,33 @@ footnotes                = <sup>1</sup> Motto of the Queen: ''Guds hjælp, Folke
 }}
 [[Image:Johan Thomas Lundbye 001.jpg|thumb|right|200px|Hankehøj, by Thomas Lundbye. A Danish down. Note the glacial character of the terrain and the kurgan, or burial mound of an early chief, in the center.]]
 [[Image:Viking ship in Stockholms strom.jpg|thumb|right|200px||Reconstruction of a Viking ship]]
+ډنمارک د شمالي اروپائ د اسکانډوي منطقو څخه د ګرين لينډ او فاروئ جزائرو په خوا کښې د ډنمارک د بادشاهئ لاندې متعين شوې يو ائيني جمهوري هيواد دے. 
 
-The '''Kingdom of Denmark''' ([[Danish language|Danish]]: ''Kongeriget Danmark'') is the geographically smallest and southernmost [[Nordic countries|Nordic country]] in addition to being the oldest. Located north of [[جرمني/آلمان]] (its only land neighbour), southwest of [[Sweden]], and south of [[Norway]], it lies at {{coor dms|56|00|00|N|10|00|00|E|}} in [[Scandinavia]] which is in northern [[Europe]], but not on the [[Scandinavian Peninsula]].  
+دا د نارووېجن هيوادونو په انتهائي جنوب کښې او مرکزي برخه ئې هم په شمال کښي د جرمني سره پيوست ده . 
 
-Denmark borders the [[Baltic Sea]] and the [[North Sea]], and consists of a peninsula named [[Jutland]] (''Jylland'') attached to Northern [[Germany]], the islands [[Funen]] (''Fyn''), [[Zealand]] (''Sjælland''), [[Bornholm]] (''Bornholm'') and many smaller islands, the waters of which are often referred to as the Danish [[Archipelago]]. 
+ډنمارک د سويډن په جنوب غرب کښې او د ناروې په جنوب کښې پروت دے. 
+د ډنمارک بريدونه د بالټيک رياستونو او بحر شمال سره لګيدلي دي 
 
-Denmark is a [[constitutional monarchy]] and is part of the [[European Union]]. [[Greenland]] and the [[Faroe Islands]] are [[The Crown|Crown]] territories of Denmark, each with [[Devolution|political home rule]].
+ډنمارک يوه اوږده جزيره نما غوندې منطقه ده چۀ په ګڼ شمير جزيرو باندې مشتمله ده 
+چې په کښې یولينډ،،او نورې لکه ،سجيلينډ،،فئن ،ويندسيسل،دائ لو لينډ،فالسټر،او بورنهوم او دغه رقم نورې وړو وړو جزئيرو پکښې خوندي دي 
+ډنمارک د بالټيک او ورسره تړلې بحر د خپل انتظام لاندې ساتي.او دغه بحر ته دنيش سيند يا (خليج( هم وائي. 
+فاروئ جزائر او ګرين لينډ دوه يو شان مملکتونه دي چې د ډنمارک د بادشاهئ سره تړلي دي خو د يورپي يونين غړي مملکتونه نه دي.
+ډنمارک په سويډن پسې په دوئم نمبر کښې سياحتي هيواد دے چې ۴.۷ ميلونه سيل ګري ورته په 2۰۰۷ کښې راغلي وو 
+ډنمارک يو ائيني پارليماني رجيم دے 
+ډنمارک په يو رياستي سطح جوړ حکومت لري چې پکښې اته نوي بلدياتي نظامي ادارې لري. 
+ډنمارک داروپائي يونين يو غړې هيواد دے چې اول به ورته د ۱۹۷۳ نه وروستو اروپائي اقتصادي کيمونيټي وائيلې شوه.خو لۀ هغه وخت دغه کيموينټي په يورو زون کښي بدله شوې نه وه چې وروستو بيا په يوه کرنسئ يوره کښې بدله شوه،چې غړي مملکتونو په رسمي توګه دغه يورو خپله ايکي يوه رسمي کرنسي وبلله. 
+ډنمارک د ناټو باني غړئ دے. 
+ډنمارک د خپل ازاد تجارتي نظام له کبله د لوړ امدن يو فلاحي هيواد ګڼل کيږي 
+په 2006 نه تر 2۰۰۸ پورې ډنمارک دنړئ په خوشحاله هيوادونو کښې د صحت ،فلاح و بهبود او د تعلم په حواله سره حسابيدو 
+په 2۰۰۸ د ګلوبل پيس انډيکس سروے له خواډنمارک د امن په لحاظ د آيس لانډ نه وروستو، په دوئم نمبر کښې وټاکل شو. 
+ډنمارک د سويډن او نيوزلينډ سره شريک په 2۰۰۸ کښې د يوې موسسې کرپشن پرسيپشن انډيکس له خوا په دنيا کښي تر ټولو کم ټګ مملکت وشميرل شو.. 
+
+د يوې جريدې له خوا په 2۰۰۸ کښې د ډنمارک لوئي او سر ښار کوپن هيګن د دنيا په ښاد او اباد ښارونو کښې وزبادولې شو. 
+
+د ډنمارک قومي ژبه دينش ده، چې د ناروې،او سويډن سره نزديکت او کلتوري او تاريخي اړيکي لري 
+په وراثتي شرح ئې ۹۰.۳% اوپه نسلي شرح ئې ۸2 % د لوتهرين چرچ غړي دي.او تقريبا ۹% ابادي ئې د بيرون څخه راغلو ،په خلکو باندې مشتمله ده 
+د بيرون څخه راغلي باشندګان ئې په بشپړ توګه دسکانډينوين نسلونه سره تعلق لري او باقي نور بيا د دنيا د بيلا بيلو برخو نه راغلي باشنګان دي 
+
 
 == تاريخ ==
 :''Main article: [[History of Denmark]]''
