*Empty MediaWiki Message*

--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -50,13 +50,13 @@ cctld                    = [[.dk]]<sup>3</sup> |
 پېل ګڼ             = 45<sup>3</sup> |
 footnotes                = <sup>1</sup> Motto of the Queen: ''Guds hjælp, Folkets kærlighed, Danmarks styrke'' ([[English language|English]]: ''God's help, the People's love, Denmark's strength'').<br /><sup>2</sup> Co-official with [[Greenlandic]] in [[Greenland]], and [[Faroese language|Faroese]] in the [[Faroe Islands]]. [[German language|German]] is recognised as a protected minority language in the South Jutland area of Denmark. Danish is recognised as a protected minority language in the [[Schleswig-Holstein]] region of [[جرمني/آلمان]].<br /><sup>3</sup> Information for Denmark excluding the Faroe Islands and Greenland.
 }}
-[[Image:Johan Thomas Lundbye 001.jpg|thumb|right|200px|Hankehøj, by Thomas Lundbye. A Danish down. Note the glacial character of the terrain and the kurgan, or burial mound of an early chief, in the center.]]
-[[Image:Viking ship in Stockholms strom.jpg|thumb|right|200px||Reconstruction of a Viking ship]]
-ډنمارک د شمالي اروپائ د اسکانډوي منطقو څخه د ګرين لينډ او فاروئ جزائرو په خوا کښې د ډنمارک د بادشاهئ لاندې متعين شوې يو ائيني جمهوري هيواد دے. 
+[[Image:Johan Thomas Lundbye 001.jpg|thumb|left|200px|Hankehøj, by Thomas Lundbye. A Danish down. Note the glacial character of the terrain and the kurgan, or burial mound of an early chief, in the center.]]
+[[Image:Viking ship in Stockholms strom.jpg|thumb|left|200px||Reconstruction of a Viking ship]]
+'''ډنمارک''' د شمالي اروپائ د اسکانډوي منطقو څخه د ګرين لينډ او فاروئ جزائرو په خوا کښې د ډنمارک د بادشاهئ لاندې متعين شوې يو ائيني جمهوري هيواد دی. 
 
 دا د نارووېجن هيوادونو په انتهائي جنوب کښې او مرکزي برخه ئې هم په شمال کښي د جرمني سره پيوست ده . 
 
-ډنمارک د سويډن په جنوب غرب کښې او د ناروې په جنوب کښې پروت دے. 
+ډنمارک د سويډن په جنوب غرب کښې او د ناروې په جنوب کښې پروت دی. 
 د ډنمارک بريدونه د بالټيک رياستونو او بحر شمال سره لګيدلي دي 
 
 ډنمارک يوه اوږده جزيره نما غوندې منطقه ده چۀ په ګڼ شمير جزيرو باندې مشتمله ده 
