--- a/احمد_ياسين.mw
+++ b/احمد_ياسين.mw
@@ -10,9 +10,10 @@
 شېخ احمد یاسین په ۱۹۸۳زکال داسرایلو لخوا وسلې ساتلو او پوځي غورځنګ جوړونې په تور ونیول شو. او د محکمې لخوا په ۱۳ کاله بند محکوم شو.
 
 ===حماس===
-او در سال [[۱۹۸۷]] ([[۱۳۶۶]]) به همراه گروهی از فعالان اسلامگرا، «جنبش مقاومت اسلامی» ([[حماس]]) را در [[غزه]] بنیان گذاشت. 
+ده په [[۱۹۸۷ز]] ([[۱۳۶۶هجري لمریز]]) کال د یو شمېر فعالو ملګرو په ملتیا په [[غزه]] کې د «[[حماس اسلامي غورځنګ]]» بنسټ کېښود.
 
-در سال [[۱۹۸۵]] در چار چوب تبادل اسراء میان دولت [[اسرائیل]] و [[جبهه آزادیبخش فلسطین]] پس از تحمل ۱۱ ماه زندان، آزاد شد. در سال [[۱۹۸۸]] [[نیروهای دفاعی اسرائیل]] با یورش به منزلش، او را مورد بازجویی قرار داده و تهدید به تبعید به [[لبنان]] کردند.{{مدرک}} در [[۱۶ اکتبر]] [[۱۹۹۱]] دادگاه نظامی با کیفر خواستی در ۹ بند، او را به اتهام تشویق برای ربودن و قتل سربازان اسرائیلی، تأسیس [[حماس]] و تشکیل دستگاههای امنیتی و نظامی متهم کرده و او را به [[حبس ابد]] به علاوه ۱۵ سال زندان محکوم ‌کرد .
+په [[۱۹۸۵ز]] کال د اسراییلو او حماس غورځنګ ترمنځ د اسیرانو د بدلون په لړ کې شېخ احمد یاسین پس له ۱۱ میاشتو بنده را خوشی شو. په [[۱۹۸۸ز]] کې اسراییلي ځواکونو دده په کور برید وکړ او تحدید یې کړ، که له خپلو کارونو لاس پر سر نشي، نو لبنان ته به یې تعید کړي.
+د [[۱۶ اکتوبر]] [[۱۹۹۱ز]] د اسراييلو نظمامي محکمې د خپل قانون له مخې، چې دې ځوانان د اسرایيلي ځواکونو په تښتونه او وژنه تورن کړ او د تل لپاره یې په بدن محکوم کړ.
 
 
 
