*Empty MediaWiki Message*

--- a/احمد_ياسين.mw
+++ b/احمد_ياسين.mw
@@ -1,8 +1,9 @@
-'''احمد اسماعیل یاسین''' (۱۹۳۷-۲۰۰۲<sup>حدود ۶۸ سال</sup>) معروف به '''شیخ احمد یاسین'''، بنیانگذار جنبش مقاومت اسلامی ([[حماس]]) و ریاست مجمع اسلامی [[غزه]] بود.
+'''احمد اسماعیل یاسین''' (۱۹۳۷-۲۰۰۲<sup>تقریبا ۶۸ کلن</sup>) چې په '''شیخ احمد یاسین''' پېژندل کېږي، د فلسطین د مقاومت اسلامی غورځنګ بنسټګر او د غزې د اسلامي ریاست رییس وو.
 
 ==ژوند==
 شېخ احمد یاسین په ۱۳۱۷هجری لمریز چې له ۱۹۳۷ز کال سره سمون خوری، د غزې د تړانګې د مجدل ښارګوټی، په الجوري نومي ځای کې زېږېدلې دی. 
 درې کلن ؤ، چې پلار یې ومړ، او له خپلې کورنۍ سره د ۱۹۴۸زکال له جګړې څخه وروسته د غزې تړانګې ته مهاجر شو. 
+
 شېخ احمد یاسین په ځوانه ځوانۍ کې د یوې ترافیکي پېښې له امله فلج شو، مګر دې پېښې اتل شېیخ له ټولنیزو، سیاسي او خپلواکۍ غوښتونکیو فعالیتونو څخه راونه ګرځاوه. زده کړې یې په همدې نیمه ځان پشپړې کړې، او د عربي ادب او اسلامی ښوونې ښوونکي په تو
 ګه یې خپل فعالیتونه پرمخ بوتلل. د غزې په تړانګه کې به يې په جوماتونو کې خپل تبلیغ کاوه، او د لږ وخت په تېرېدو سره د غزې له نوموتو ویناوالو څخه وشمېرل شو.
 
