--- a/باراک_حسين_اوباما.mw
+++ b/باراک_حسين_اوباما.mw
@@ -33,27 +33,32 @@
 
 نظر پوښتنو ښودلې چې هغه د دموکرات ګوند له بلې نوماندې سناتور هيلري کلينټن سره نژدې سيالي لري او دغه راز يې د آيوا په ايالت کې د دموکرات ګوند د اسمبلې په لومړنيو ټاکنو کې لومړی شو او په نيوهمشاير ايالت کې يې په ٣ سلنه اختلاف سره له سناتور کلينټن وروسته دوهم مقام وګاټه.
 
-د ټاکنو لګښت
+
+== د ټاکنو لګښت ==
 
 د ٢٠٠٧ کال په سپتمبر مياشت کې اوباما د دې پوښتنې په ځواب کې چې د دولتي مالي تامين په سيستم کې ونډې اخيستو ته چمتو دی د هو ځواب ورکړ او زياته يې کړه چې په عمومي ټاکنو کې به له دولتی بودجې د استفادې لپاره د هوکړې د ترلاسه کولو هڅه وکړي. سره لدې اوباما د ٢٠٠٨ کال تر لومړيو د اهدايي مرستو له لارې د ٢٣٤ ميليونو ډالرو په راټولو بريالی شو.
 
 د ٢٠٠٨ کال په جنورۍ مياشت کې اوباما ٣٢ ميليونه ډالره مرسته تر لاسه کړه، په داسې حال کې چې هيلري کلنټن اړ شوه چې د ټاکنيزو مبارزو لپاره له خپل شخصي حسابه پنځه ميليونه ډالره واخلي.
 
 
-خپه کړی او غوسه کړی
+
+== خپه کړی او غوسه کړی ==
 
 د ٢٠٠٨ کال په اپريل کې باراک اوباما د خپل پخواني پادري جرمايا رايت د خبرو په غبرګون کې وويل: هغه نظرونه چې د ښاغلي رايت لخوا بيان شوې زه يې خپه کړی او غوسه کړی يم. 
 
 
-اوباما
+
+== اوباما ==
 
 د ٢٠٠٨ کال په اپريل کې سناتور اوباما ٤٢ ميليونه ډالره په خپلو ټاکنيزو فعاليتونو ولګول چې د هيلري کلينټن له ٩ ميليونه ډالرو سره يې زيات واټن درلود.
 
-باراک اوباما په رسنيو کې
+
+== باراک اوباما په رسنيو کې ==
 
 د ټايمز اوونيزې د ٢٠٠٨ کال د مۍ مياشتې د دوهمې نېټې په ګڼه کې د نړۍ د بانفوذه نارينه وو او ښځينه وو کلنی نوملړ خپور کړ، په دې نوملړ کې اوباما د (د هېوادونو د بانفوذه او انقلابي شخصيتونو) په برخه کې درېيم مقام خپل کړ.
 
-د جرمايا رايت پادري شخړه
+
+== د جرمايا رايت پادري شخړه ==
 
 د ٢٠٠٨ کال په اپريل کې باراک اوباما د خپل پخواني پادري جرمايا رايت د خبرو په غبرګون کې وويل: هغه نظرونه چې د ښاغلي رايت لخوا بيان شوې زه يې خپه کړی او غوسه کړی يم.
 
@@ -62,11 +67,13 @@
 اوباما د امريکا د دولت په اړه د جرما رايت د جنجالي خبرو په غبرګون کې وويل: باوري يم چې دغه خبرو دامريکا د تورپوستو د کليسا له نظره سم تصوير نه دی وړاندې کړی دغه خبرې زما ارزښتونه او باورونه نشي انځورولای.
 
 
-په کينيا کې د اوباما دوستان د ده په بري خوشالي کوي
+
+== په کينيا کې د اوباما دوستان د ده په بري خوشالي کوي ==
 
 باراک اوباما دغه راز هڅه وکړه چې له ښاغلي رايت څخه ليرې شي هغه وويل: جرما رايت نور داسې څوک نه دی چې ما شل کاله وړاندې ليدلی وو هره اړيکه چې مې ورسره درلوده د هغه د ويناوو له امله بدلې شوې دي.
 
-سياسي دريځونه
+
+== سياسي دريځونه ==
 
 اوباما په عراق کې د بوش د سياستونو له لومړنيو مخالفينو ګڼل کېږي، د ٢٠٠٢ کال د اکتوبر په دوهمه نېټه هغه ورځ چې کانګرس د عراق د جګړې مصوبه تصويب کړه او د بوش دولت ته يې د جنګ اجازه ورکړه اوباما په شيکاګو کې د عراق د جنګ د مخالفينو په ستر ټول کې وينا وکړه.
 
@@ -74,24 +81,32 @@
 
 اوباما د يو ليبرال دريځي سناتور په توګه خپل دريځ ټينګ کړ او د ښوونې او له ايډز سره د مبارزې په څېر موضوعګانو کې يې له جمهوري غوښتونکو سره همکاري وکړه.
 
-د ايران بنديزونه
+
+== د ايران بنديزونه ==
 
 باراک اوباما د ٢٠٠٧ کال په جون مياشت کې يوه طرحه د امريکا ولسي جرګې ته وړاندې کړه چې پکې بهرني پانګوال له ايرانه د خپلو پانګو ايستل کېدو ته هڅول کېدل. د سناتور اوباما په وينا د ايران دولت له خپلو تيلي عوايدو د خپل اتومي پروګرام د پراختيا او په منځني ختيځ کې له ترهګرو ډلو د ملاتړ لپاره ګټه اخلي؛ چې له ايراني دولت سره د مالي اړيکو د پرې کولو لپاره په شرکتونو د باو راوړل به د بنديزونو اغېز زيات کړي.
 
-اسرائيل
+
+== اسرائيل ==
+
 
 د ٢٠٠٨ په اپريل کې د باراک اوباما او هيلري کلنټن ترمنځ په نوي دقيقه ييزه مناظره کې چې د امريکا اې بي سي تلويزيوني شبکې له خوا خپره شوه اوباما په اسرايلو د ايران د بريد په غبرګون کې وويل: امريکا به وړ اقدام وکړي.
 
 
-د درس ويلو فرصت
+
+== د درس ويلو فرصت ==
 زما پلار په زيات کار سره په امريکا کې د درس ويلو فرصت ترلاسه کړی وو؛ په داسې هېواد کې چې د ډېرو هغو کسانو لپاره فرصت وو چې لدې وړاندې هلته ورغلي وو. 
 
 
-اوباما
+
+== اوباما ==
+
 
 هغه د ٢٠٠٨ کال د جون په مياشت کې د امريکايي اسرايلي عمومي اړيکو په کمېټه کې (AIPAC) وويل که ولسمشر شي هر هغه کار به وکړي چې ايران له اتومي وسلو منع شي. هغه دغه راز ايران د اسرايلو او منځني ختيځ د سوکالۍ لپاره ستر ګواښ وباله او ويې ويل: د ايران ګواښ، سخت او ريښتينی دی او زما موخه به داوي چې دغه ګواښ له منځه يوسم. هغه دغه راز اورشليم د اسرايلو نه وېشل کېدونکې پلازمېنه وبلله .
 
-محبوبيت
+
+== محبوبيت ==
+
 
 باراک اوباما په ٢٠٠٤ کال د لومړي ځل لپاره د دموکرات ګوند په غونډه کې په ملي او نړيواله کچه زيات پام ځانته جلب کړ. اوباما په دغه وينا کې په خپل ژوند او شخصي تاريخچه په تکيې سره امريکايي اېډيالونه بيان کړل.
 
@@ -99,7 +114,8 @@
 
 باراک اوباما له دغې وينا څو مياشتې وروسته په ٢٠٠٤ کال کې له خپلې بريالۍ ټاکنې وروسته د رسنيو په محبوبه څېره او په واشنګټن کې په ښه شخصيت بدل شو چې دوه ډېر پلورل کېدونکي کتابونه يې هم په خپل نامه خپاره کړل. لومړی يې ( زما د پلار له خوبونو) چې سنا ته له تللو يې نهه کاله وړاندې ليکلی او د هغه خاطرې پکې راټولې شوې وې.
 
-بالاخره اوباما د امريکا د ٢٠٠٨ ټاکنې وگټلې.
+
+== بالاخره اوباما د امريکا د ٢٠٠٨ ټاکنې وگټلې. ==
 
 دوهم يې هم د امريکايي خوبونو بېرته په لاس راوړل چې د هغه افکار يې رانغاړلي دي. اوباما د امريکا د تلويزيون د محبوبې څېرې اپرا وينفری له ملاتړه برخمن دی. دغه تلويزيوني ستوري نه يوازې له هغه وغوښتل چې ټاکنو ته ځان ونوموي بلکه د هغه په ټاکنيزو تبليغاتو کې يې هم فعاله ونډه درلوده.
 
@@ -109,6 +125,7 @@
 
 په دموکرات ګوند کې له لومړنيو ټاکنو وروسته له د جمهوري غوښتونکي ګوند له نوماند جان مکېن سره د هغه سيالي پيل شوه. جان مکېن هغه په بې تجربې توب تورن کړ، باالمقابل اوباما مکېن د تيلي شرکتونو ځيره خور باله او د مکېن ويندوی توکر بوندز دغه خبرې ردولې او ويې ويل چې همدا اوباما وو چې د بوش چيني هغه طرحې ته يې مثبته رايه ورکړه چې د تيلي کمپنيو لپاره يې زياته ګټه درلوده. د ٢٠٠٨ کال په اګسټ مياشت کې باراک اوباما جوزف بايډن د خپل مرستيال په توګه غوره کړ.
 
-د ولسمشرۍ په ټاکنو کې بريا
+
+== د ولسمشرۍ په ټاکنو کې بريا ==
 
 باراک اوباما د امريکا د ولسمشرۍ په ټاکنو کې چې د ٢٠٠٨ کال د نومبر په څلورمه نېټه ترسره شوې بريالی شو، په لومړنيو پايلو کې ويل شوي وو چې هغه د کالج الکترال له ٢٧٠ رايو چې د ولسمشرۍ د اړتيا وړ نصاب وو په لاس راوړې، جان مکېن هم د اوباما بريا ته مبارکي ورکړه، اوباما په دې ټاکنو کې له برياليتوب وروسته د شيکاګو په ګرنډ پارک کې د زرګونو کسانو په ټول کې حاضر شو او له رای ورکوونکو يې مننه وکړه
