فارسی سازی ارقام

--- a/ابو_حنيفه_(امام_اعظم).mw
+++ b/ابو_حنيفه_(امام_اعظم).mw
@@ -29,8 +29,187 @@
 
 څو چې په ۹۵ هـ کې حجاج مړ شو او په ۹۶ هـ کال کې وليد هم له دُنيا ولاړ او د هغه پر ځای سليمان بن عبدالملک خليفه شو چې د مورخانو په قول د بني اُميه له خورا ښو خليفه ګانو څخه و او دده د خلافت په دوره کې درس او تدريس بيا ځلانده رونق پيدا کړ او د خلکو زياته پاملرنه بيا د علومو او فنونو وخوا ته واوښته.
 
+
+امام اعظم نعمان بن ثابت بن زوتا، چې په خپل کنیت سره (ابو حنیفه) سره ښه پېژندل کېده،  په ۷۶۷ز کال چې له ۸۰هجري سپوږمیز کال  سره سمون خوري، د کوفې ښار کې وزېږېد. 
+دا امام د حنفي فقهی ښوونځي بنسټ اېښودونکې دۍ. 
+دا رنګه امام صېب یو له نامتو تابعینو ( له صحابه ؤ څخه وروستنې نسل) څخه ؤ، ځکه ده په خپل ژوند کې د رسول الله صلی الله علیه وسلم له صحابه ؤ ( لکه امام مالک بن انس او داسې نور) سره لیدلي ول، او له هغوي څخه یې سپېڅلی احادیث هم اورېدلی ول.[http://www.masud.co.uk/ISLAM/misc/abu_hanifa.htm]
+
+
+== زېږېدنه، نوم او کوشنیتوب==
+ 
+امام ابو حنيفه رحمه الله عليه وسلم په ۸۰ هجري چې له ۶۹۹زېږيز كال سره سمون خوري په كوفه كې زېږېدلې.
+
+كوفه په هغه وخت كې د علم او پوهې مركز ؤ، امام صېب به تل د فقهيانو او سپېڅليو حديثو حلقو ته حاضرېدو. د قرآن كريم له حفظ څخه وروسته امام صېب په كوفه كې  له خپل پلار سره د سوداګرۍ په كاروبار بوخت ؤ. له سوداګرۍ سره سره به يې د وخت پوهانو مجلسونو ته هم سروښكاره كاوه. كله چې د امام عامر الشعبي نظر پېرې ولګېده،  نو هغه ورته نصيحت وكړ ترڅو علم او پوهې ته مخه  كړي، ځكه امام عامر رحمه الله په امام صېب كې د نبوغ، ذكاوت، د عقل پوخوالې او د هوښيارۍ  نښې له ورايه وليدې نو ځكه يې دې ده وهڅاوه ترڅو د پوهانو ديني حلقو ته مخه كړي، هماغه ؤ چې امام صېب د نوموړي عالم خبره سرپه سترګو ومنله او خپله د  سوداګرۍ كار يې پرېښود او علم ترلاسه كولو پسې ووت. امام صېب سپېڅلي احاديث روايت كړل، عربي ژبه او ادب يې پوره زده كړل، او وروسته لدې يې د كلام علم ترلاسه كړ تردې چې پدې علم كې لوړې پوړۍ  ته ورسېد او د بې لارو ډلو له سرخېلو سره به يې په عقيدوي مسائلو كې مجادلې او مباحثې كولې چې تل به پكې بريالې راووت. څه موده وروسته يې فقهې ته مخه كړه او د حماد بن ابي سليمان په حلقه كې ورګډ شو ان تردې چې ۱۸كاله يې ورسره تېر كړل.
+امام صېب د به هركال  د حج فريضه ترسره كوله آن تردې چې ځينې پوهان وايي چې امام صېب ۵۵ځله د حج فريضه ادا كړې وه. د امام صېب دا سفرونه هغه دې ده ته اړ كړ چې د بېت الله الحرام او نبوي مسجد له فقهاؤ پوهانو سره وګوري او د هغوي له پوهو  څخه برخمن شي، له هغوي څخه نبوي احاديث ترلاسه كړي، فقهي مسائل ترې وپوښتي، او د هغوي له درس او تدريس څخه ګټه پورته كړي، پدې ډله كې چې هغه له چا سره كتلي او د هغوي له پوهې څخه يې ګټه اخيستې نوموړې تابعي عامر الشعبي (۱۰۳هجري- ۷۲۱ز مړ)، عكرمه مولى ابن عباس (۱۰۵هـ- ۷۲۳ز مړ)، نافع مولىبن عمر (۱۱۷هـ - ۷۲۵ز مړ) او  زېد بن علي زېن العابدين (۱۲۲هـ - ۷۴۰ز مړ) دي. ځيني پوهان د امام صېب ښوونكي آن تر ۴ زرو پورې رسوي، 
+امام صېب له تابعينو څخه ؤ، هغه پدې مانا چې ده په خپل ژوند كې د پېغمبر صلى الله عليه وسلم له سپېڅلو اصحابو سره كتنې شوي او د هغوي له ويناؤ څخه يې ګټه ترلاسه كړې، له هغوي څخه يې مبارك احاديث روايت كړي، لكه انس بن مالك، عبدالله بن ابي اوفىو سهل بن سعد او ابو الطفيل عامر بن وائله رضي الله عنهم.
+
+{{سني اسلام}}
+Abu Hanifa (۶۹۹ — ۷۶۷ [[Christian Era|CE]] / ۸۰ — ۱۴۸ [[AH]]) was born in [[Kufa]], [[Iraq]] during the reign of the powerful [[Umayyad]] [[caliph]] [[Abd al-Malik|Abdul Malik bin Marwan]]. Acclaimed as ''Al-Imam al-A'zam'' (the Great Imam), Nu’man bin Thabit bin Zuta bin Mah was better known by his ''[[kunya]]'' Abu Hanifa. It was not a true ''kunya'', as he did not have a son called Hanifa, but an epithetical one meaning pure in monotheistic belief. His father, Thabit bin Zuta, a trader from [[Kabul]], part of [[Greater Khorasan|Khorasan]] in [[Persia]] (the capital of modern day [[Afghanistan]]), was ۴۰ years old at the time of Abu Hanifa's birth.
+
+His ancestry is generally accepted as being of non-Arab origin as suggested by the etymology of then names of his grandfather (Zuta) and great-grandfather (Mah). The historian, [[Al-Khatib al-Baghdadi]], records a statement from Abu Hanifa's grandson, Ismail bin Hammond, who gave Abu Hanifa's lineage as Thabit bin Numan bin Marzban and claiming to be of Persian origin. The discrepancy in the names, as given by Ismail of Abu Hanifa's grandfather and great-grandfather are thought to be due to Zuta's adoption of a muslim name (Numan) upon his acceptance of Islam and that Mah and Marzban were titles or official designations in Persia. Further differences of opinion exist on his ancestry. Abu Muti, for example, describes Abu Hanifa as an Arab citing his ancestry as Numan bin Thabit bin Zuta bin Yahya bin Zaid bin Asad. The widely accepted opinion, however, is that he was of Persian ancestry.
+
+==د تابعی په توګه==
+Abu Hanifa was born ۶۷ years after the departure of Prophet Muhammad (Sall Allahu alaihi wasallam) but during the time of the [[Sahaba|companions]] of Prophet Muhammad (Sall Allahu alaihi wasallam) some of whom lived on until Abu Hanifa's youth. Anas bin Malik, the prophet's personal attendant died in ۹۳AH and another companion, Abul Tufail Amir bin Wathilah died in ۱۰۰AH when Abu Hanifa was ۲۰ years old. No evidence exists, however, to indicate Abu Hanifa had narrated any [[ahadith]] from the companions although there is no doubt he was a thabiee (one who had met a companion of Muhammad) and had met Anas bin Malik.
+
+It is perceived this is due to the strict age requirements for learning the discipline of hadith that existed at the time in Kufa where no one below the age of ۲۰ was admitted to a hadith school. The scholars of the time felt anyone below this age would not have attained the maturity required to be able to understand the meaning of the narrations.
+
+==لومړنې ژوند او زده کړه==
+Abu Hanifa grew up in a period of oppression during the caliphates of Abdul Malik bin Marwan and his son Walid bin Abdul Malik. The governorship of Iraq was under the control of Hajjaj bin Yusuf, a loyal follower of Abdul Malik. During his governorship leaders in religion and learning were especially targeted by Hajjaj as they were proving to be an obstacle to Abdul Malik's establishment of his rule across Arabia and Iraq. Consequently, Abu Hanifa had no interest nor the opportunity to acquire any education in his early childhood. He was simply content with following in the footsteps of his ancestors — as a businessman.
+
+He set up a silk weaving business where he showed scrupulous honesty and fairness. Once his agent in another country, sold some silk cloth on his behalf but forgot to point out a slight defect to the purchasers. When Abu Hanifa learned this, he was greatly distressed as he had no means of refunding their money. He immediately ordered the entire proceeds of the sale of the consignment of silk to be distributed to the poor.
+
+Following the deaths of Hajjaj in ۹۵AH and Walid in ۹۶AH, justice and good administration began to make a comeback with the caliphates of Sulaiman bin Abdul Malik and thereafter Umar bin Abdul Aziz. Umar encouraged education to such an extent that every home became a [[madrassah]]. Abu Hanifa also began to take an interest in education which was heightened further by the unexpected advice of as-Sha'bi (d. ۷۲۲), one of Kufa's most well-known scholars.
+
+While running an errand for his mother, he happened to pass the home of as-Sha'bi. Sha'bi, mistaking him for a student, asked him whose classes he attended. When Abu Hanifa responded that he did not attend any classes, Sha'bi said, "I see signs of intelligence in you. You should sit in the company of learned men." Taking Sha'bi's advice, Abu Hanifa embarked on a prolific quest for knowledge that would in due course have a profound impact on the history of Islam.
+
+Abu Hanifa's early education was achieved through [[madrassah]]s and it is here that he learned the [[Qur'an]] and [[Hadith]] doing exceptionally well in his studies. He spent a great deal of time in the tutelage of Hammad a great Jurist of Kufah.
+
+==ځواني==
+In ۷۶۳, [[al-Mansur]], the [[Abbasid]] monarch offered Abu Hanifa the post of Chief Judge of the State, but he declined to accept the offer, choosing to remain independent. His student, Abu Yusuf, was appointed ''Qadi Al-Qadat'' (Chief Judge of the State) of [[al-Mansur]] regime instead of himself.
+
+In his reply to al-Mansur, Abu Hanifa excused himself by saying that he did not regard himself fit for the post. Al-Mansur, who had his own ideas and reasons for offering the post, lost his temper and accused Abu Hanifa of lying. 
+
+"If I am lying," Abu Hanifa said, "then my statement is doubly correct. How can you appoint a liar to the exalted post of a Chief Qadi (Judge)?" 
+
+Incensed by this reply, the ruler had Abu Hanifa arrested and locked in prison and tortured. <sup>[[Ya'qubi]], vol.lll, p.۸۶; [[Muruj al-dhahab]], vol.lll, p.۲۶۸-۲۷۰.</sup>
+
+Even there, the indomitable jurist continued to teach those who were permitted to come to him. 
+
+In ۷۶۷, Abu Hanifa died in prison.  It was said that so many people attended his funeral that the funeral service was repeated six times for more than ۵۰٬۰۰۰ people who had amassed before he was actually buried.
+
+
+
+
+
+
+== د نبي علیه السلام وړاندوینه ==
+د امام ابو حنیفه رحمه الله روزنه چې په کوم پیر کې وشوه، په هغه وخت کې زیاتره فقها موالی ول.د هغوی د نسب لړۍ دومره لوړه نه وه، مګر څښتن تعالی هغوی ته د پوهې لوړه مرتبه ورکړې وه، چې له نسب څخه ډېره سپېڅلې، تل پرمختګ کوونکې او ډېر وخته پورې پاتې کېدونکې نعمت خاوندان شول. 
+
+د نبی علیه السلام دا دعا چې ډېر زر به پوهه د عجمو ته ور انتقال شي، په زبات ورسېده. که څه هم چې طبراني او شېرازي دا روایت کړې، چې رسول الله صلی الله علیه وسلم فرمایلي دي چې: 
+که چېرې د دین مقام هرڅومره هم لوړ شي، نو د پارس خلک به یې د ترلاسه کولو څخه شاته پاتې نه شي. 
+په کومو کتابونو کې چې ددې حدیث یادونه شوې، الفاظ یې مختلف دي، مګر د مانا له مخې سره یو دي.
+
+== د علي کرم الله وجهه دعا ==
+
+روایت کېږي، چې علي کرم الله وجهه د امام اعظم علیه رحمه الله پلار او د هغه اولادې ته د خیر او برکت دعا کړې وه، نو له دې خبرې څخه دا خبره په زبات ورسېده، چې د امام صېب پلار مسلمان ؤ، او د امام صېب زوکړه هم په یوه مسلمانه او متدینه کورنۍ کې شوې وه.  په تاریخي کتابونو کې ددې خبرې یادونه شوې چې: د امام صېب پلار (ثابت) په مسلمانه کورنۍ کې وزېږېد، او د امام صېب پالنه هم  په یوه مسلمانه کورنۍ کې وشوه.
+
+== د خپل ښوونكي ځاېناسته: ==
+
+كله چې د امام صېب ښوونكې حماد بن ابي سليمان ومړ نو د هغه د حلقې په ګدۍ امام ابي حنيفه رحمه الله كېناست، چې پدې وخت كې د امام صېب عمر ۴۰ كاله ؤ. امام صېب د يوه ځانګړې لارې درلودونكې ؤ، هغه مسائل او ستونزې چې په حلقه كې به خلكو دده مخې ته وړاندې كولې په يو ځانګړې انداز او طريقه حلولې، دا مسئلې به يې سمدلاسه خپله نه حوارولې، بلكه په حلقه كې به يې له ناستو خلكو څخه وپوښته، ترڅو د ټولو نظر ترلاسه كړي، بيا به امام صېب ددوي رائى سره راټولې او د هغوي له رايو څخه به يې په ګډه يوه رايه د ټولو په خوښه راخپله كړه.
+امام صېب د ډېر مال خاوند ؤ، ډېر زده كوونكو به يې دا توان نه درلودو ترڅو خپلو درسونو ته دوام وركړي نو امام صېب به ددوي نفقه په خپله غاړه اخيسته او د هغوي لپاره به يې يوه اندازه پېسې له خپل جېب څخه وټاكلې ترڅو هغوي خپلو زده كړو ته دوام وركړي.
+لكه څرنګه چې ددې مذهب يو نوموړي امام ابو يوسف سرپرستي كول او د هغه جېب خرڅ وركول. امام يوسف رحمه الله پدې اړه داسې وايي: (( امام صېب زما او زما د كورنۍ پوره ۲۰ كاله
+
+== د مذهب اصول يې ==
+: 
+د امام صېب مذهب په كوفه كې راوټوكېد، او دد په لاسو د حنفي مذهب  اصول جوړ شول، او ښائسته يې كړل لكه څرنګه چې په خپله وېنا كې وايي: (( په تحقيق سره زه د الله د كتاب څخه مسئلې حواروم، كه چېرې په قرآن كې مې پېدا نكړې، نو بيا مې نبوي احاديث رااخيستي دي، كه چېرې په هغې كې مې هم پېدا نكړه، نو بيا مې د اصحابو څخه ، بيا ددوي له قول څخه بهر د بل چا قول ته نه وځم، كله چې خبره ابراهيم، شعبي، حسن، ابن سيرين او سعيد بن المسيب ته ورسېده نو بيا زما خوښه چې كوښښ وكړم، لكه څرنګه چې دوي كوښښ كړې ؤ.))
+او دا په رښتيا سره هغه اصول دي چې نور اماما يې هم متابعت كوي. لومړې د څښتن تعالى په كتاب، بيا نبوي احاديثو ته رجوع كوي. 
+
+== د حنفي مذهب خپرېدل ==
+: 
+د اما [[ابو حنيفه]] [[مذهب]] په مختلفو ملكونو كې خپور شو چې د نړۍ ۷۰ په سلو كې د همدې [[مذهب]] پېروان دي، ددې [[مذهب]] په خپرولو كې د [[امام ابو يوسف]] رحمه الله لوى لاس ؤ، ځكه هغه د [[عباسي خلافت]] [[قاضي القضات]] ؤ، پدې [[خلافت]] كې [[حنفي مذهب]] رسمي بڼه درلوده. همدارنګه د [[سلجوقيان]]و، [[غزنويان]]و، [[عثماني خلافت]] او داسې نورو حكومتونو لخوا رسمي پېژندل شوې مذهب ؤ. ددې مذهب زياتره پېروان په عراق، مصر، شام، يمن، افغانسان، مركزي [[اسيا]] هېوادونه، [[هند]]،، [[پاكستان]]،  [[چين]] او داسې نور دي. 
+نوموړي زده كوونكي يې: 
+[[امام ابو يوسف]]، [[زُفر]]، [[حسن بن زياد،]] او [[امام محمد]] بن الحسن الشيباني
+
+== ليكلي اثار ==
+ 
+* الفقه الاكبر: دا كتاب يې په علم كلام كې ليكلې، پدې كتاب كې د الله تعالى د صفاتو، تقدير، خېر او شر من الله زبات ته رسولو څخه بحث كړې دى.
+* المسند: دا كتاب د نبوي احاديثو په اړه دى، چې امام سيوطي رحمه الله پرې شرحه ليكلې ده  او په (التعليقه المنيفه علۍ مسند ابي حنيفه) يې نومولې دى.
+* ''کتاب الاثار'' - د ۷۰۰۰۰زره سپېڅلو احادیثو ټولګه
+*  'also compiled Kitabul Assar
+* ''Aalim-wal-muta‘allim''
+* ''Fiqh al-Akbar''
+* ''جامع المسانید''
+* ''کتاب الرد علی القدریه''
+
+== مړينه ==
+: 
+الله تعالى د امام ابو حنيفه رحمه الله په عمر كې بركت اچولې ؤ،  د عباسي خليفه منصور له اړخه د قاضي القضاه د وظيفي په نه منلو سره په زندان كې واچلول شو چې هلته د ۷۰ كالو په عمر د جمادي الاول په ۱۱مه، په ۱۵۰هجري كال چې د ۷۶۷زېږيز كال  جون د مياشتې له ۱۴مې نيټې سره سمون خوري لدې فاني نړۍ سترګې پټې كړى.
+
+
+== د امام ابو حنيفه رحمه الله فقهي اصول ==
+دا حقيقت د هېڅ دليل محتاج ندې، چې د اسلام فقهاء ؤ او مجتهدينو د دين د ښوونكيو په توګه د مسلمان امت لپاره د قدر وړ خدمت كړې، دوي د راتلونكيو فقهي مسائلو د احكامو مالومولو لپاره علمي بحث او څېړنې كړي، او د اجتهاد او استنباط له لارې يې ددې مسئلو احكام ترلاسه كړي دي. ددوي ددې كوښښ او څېړنو ټول اسلامي امت پوروړې او منونكې دى، له الله څخه ورته د اجر غوښتونكي دي. دا خبره بايد په پام كې ولرو چې ددې امامانو علمي او فقهي څېړنو ته يو خپلواك مذهب نه بلكه د قرآن او سنتو تعبيركوونكو او تشرېح كوونكو حيثيت ترلاسه دى. ددې فقهاؤ فقهي اختلاف د امت د يووالي منافي ندى،بلكه دا د شريعت له محاسنو څخه دي. پدې اړه قاضي ابن العربي داسې وايي: ( د ائمه ؤ فروعي اختلاف د شريعت په ښو كې شامل دى). نو موږ بايد د مجتهدينو اجتهادي رايو ته متوازي مذاهبو حيثيت ورنكړو، او نه هم لدې رايو څخه ډله ډلبندي او عصبيت ذريعه جوړه كړو. بلكه ددوي اختلاف يواځې يو اختلاف وګڼو. د اسلام ټول فقهاء او مجتهدين د درناوي وړ دي، او ددوي د احوالو او اثارو يادونه د بركت او نېكمرغۍ سبب ګرځي.
+
+
+
+==  د فقهې حقيقت ==
+امام ابو حنيفه رحمه الله نه يواځې يو فقهي ؤ، بلكه د ټولو فقهاؤ امام هم ؤ، د هر فقهي يو څه اصول وي، چې دا اصول د خپلې څېړنې او تحقيق په دوران كې كارول كېږي. د امام ابوحنيفه رحمه الله هم يو څه اجتهادي اصول ول، چې دا اصول يې د فقهې د تدوين په دوران كې په نظر كې لرل. مخكې لدې چې دا اصول بيان كړو، ښه به دا وي، چې د فقهې حقيقت لږ روښانه كړو. د فقهې د ويي لغوي مانا (الشق و الفتح) ده، يانې څيرل او خلاصول، د يو شي پېژندلو لپاره اړينه ده، چې ورڅڅه پرده پورته شي، او صحيح او غلط بېل بېل كړاى شي. نو پدې ډول د فقهې ويي د پوهې او علم په ماناو استعمالېږي، مګر د اهل اسلام په عرف كې فقه د دين او شريعت پوهې ته وايي، علامه جارالله زمخشري رحمه الله (۵۸۳هـ مړ) داسې ليكي: (د فقهې حيقيقي مانا د څيرلو او خلاصولو په مانا ده. فقهي هغه څوك دى، چې د احكامو شننه او څېړنه كوي، د هغې د حقايقو پلټنه كوي او مبهم او پېچلي احكام روښانه كوي)........
+
+
+
+==  د حنفي فقهې بنسټيز اخځليكونه او مصادر ==
+*كتاب الله 
+*نبوي احاديث 
+*ايا پر خبر واحد قياس غوره ګڼلو لپاره د هغې د راوي فقهيتوب شرط دى؟ 
+*له خبر واحد څخه د قرآن د عام او مطلق حكم ځانګړي كول 
+*اجماع 
+*د اصحابو ويناوې 
+*قياس او اجتهاد 
+
+د قياس لغوي مانا اندازه كوله، او اصطلاحي مانا يې ( د كوم مشتركه علت له مخې يو منصوص حكم په يو غېر منصوص مسئلې باندې جاري كول). امام جصاص (۳۷۰هـ مړ) د قياس په حجتوالي كې ۲۲ ايتونه او ۱۳۹ نبوي احاديث او د صحابه ؤ ويناوي د دليل په توګه راوړي دي. لدې څخه وروسته يې عقلي د دلايل بيان كړي دي، او بيا يې د قياس نه مننوكيو اعتراضونو او شبهو ته ځوابونه وركړي. امام سرخسي رحمه الله (۴۹۰هـ مړ) فرمايي: (صحابه، تابعين، صالحين او د دين امامانو مسلك دا دى، چې د راى په ذريعه په هغو اصولو قياس كول د كومو احكام چې په نص سره ثابت دي، ترڅو د نص حكم په فروعو باندې (غير منصوص مسئلې باندې) نافذ كړاى شي جائز دى، د كومې په ذريعې چې الله تعالى اطاعت كېږي، او دا د شرعي مآخذو څڅه يو اخځ دى، مر قياس او راى كې د لومړي حكم د اثبات صلاحيت نشته.) د اجتهاد لغوي مانا : د كوم شي لټه او ترلاسه كولو لپاره خپل ټول توان په كار اچول او هر ممكن كوښښ كول. اصطلاحا: (غير منصوص مسئلو د احكامو مالوملو لپاره پوهنيزه څېړنو ترسره كول)..........
+
+
+
+== دا هم وګورئ ==
+*[[امام شافعي]] 
+*[[امام احمد بن حنبل]] 
+*[[امام مالك]] 
+*[[امام ابن تيمييه]] 
+*[[امام زُفر]] 
+*[[امام حماد]] 
+*[[امام الجويني]] 
+*[[امام الشهرستاني]]
+
+== تړلې موضوعګانې ==
+*[[امام ابو حنيفه رحمه الله عليه]] 
+*[[د امام ابو حنيفه رحمه الله فقهي اصول او قواعد او د هغې ځانګړتياوې]]
+*[[ د امام ابو حنيفه رحمه الله فقهي اصول]]
+
+
+== اخځليكونه ==
+* امام اعظم رحمه الله، لیکوال: استادابو زهره مصري، ژباړه: علامه وارث علی نعیمي.
+*مناقب الامام الاعظم، في ذيل المناقب للمكي، كوئټه، ۱۴۰۷هـ، ج ۲، ص ۱۲۵. 
+*ابن منظو افريقي، لسان العرب، دار صادر، بېروت، ۱۳۷۴هـ، ج۱۳، ص۵۲۲. 
+*شهرستاني، الملل و النحل، طبع مصطفى البابي مصر، ج۱، ص ۱۹۹.
+
+
+
+
+==یادونې==
+{{reflist}}
+
+==سرچینې==
+
+* {{cite book
+ | last = نعماني
+ | first = شبلي
+ | authorlink = شبلي نعماني
+ | coauthors = 
+ | editor = 
+ | others = ژباړه: محمد هادي حسین
+ | title = امام ابو حنیفه رحمه الله - ژوند او کار
+ | edition = ۱۹۹۸
+ | year = 
+ | publisher = اسلامک بک سروېس, نوې ډلي
+ | isbn = ۸۱-۸۵۷۳۸-۵۹-۹
+ }}
+
 == سرچينې ==
 {{reflist}}
+
+==بهرنۍ تړنې==
+* [http://muslim-canada.org/hanifah.htm د امام ابو حنیفه رحمه الله لنډ ژوندلیک] : from www.muslim-Canada.org
+* [http://www.kitabghar.org/memhome.asp?node=2 د امام مالک موطا] : from www.kitabghar.org
+For ground breaking research on the Hadith knowledge of Abu Hanifa see: http://www.research.com.pk/home/fmri/books/ar/imam-azam-saheefa/index.minhaj?id=0
+Re
+
+<gallery>
+Image:imamabuhanifah(large).jpg|Book About Imam Abu Hanifa
+</gallery>
+
+
+
+[[Category:۶۹۹زوکړې]]
+[[Category:۷۶۷ مړینې]]
 
 
 [[وېشنيزه:څلور امامان]]
@@ -38,3 +217,37 @@
 [[وېشنيزه:د مذهب بنسټ اېښودونکې]]
 [[وېشنيزه:حنفي مذهب بنسټ اېښودونکې]]
 [[وېشنيزه:حنفي مذهب پوهان]]
+
+[[Category:حنفي]]
+[[Category:سني امامان]]
+[[Category:سني مسلمانان]]
+[[Category:مسلمان پوهان]]
+[[Category:سني مسلمان پوهان]]
+[[Category:اسلامی پوهان]]
+[[Category:د اسلام مسلمان پوهان]]
+[[Category:د اسلام سنی مسلمان پوهان]]
+[[Category:مسلمان فقها]]
+[[Category:تبع تابعین]]
+
+[[category:څلور امامان]]
+[[category:لس اسلامي مذهبونه]]
+[[category:د مذهب بنسټ اېښودونکې]]
+[[category:حنفي مذهب بنسټ اېښودونکې]]
+[[category:حنفي مذهب پوهان]]
+
+[[ar:أبو حنيفة النعمان]]
+[[ca:Abu Hanifa]]
+[[de:Abu Hanifa]]
+[[en:Abu Hanifa an-Nu‘man]]
+[[es:Abu Hanifah]]
+[[fa:ابوحنیفه نعمان بن ثابت]]
+[[fr:Abu Hanifa Al-Nu'man Ibn Thabit]]
+[[id:Abu Hanifah]]
+[[ms:Abu Hanifah]]
+[[nl:Abu Hanifa]]
+[[pl:Abu Hanifa]]
+[[pt:Abu Hanifa]]
+[[sv:Abu Hanifa]]
+[[te:అబూ హనీఫా]]
+[[tr:Ebu Hanife]]
+[[ur:امام ابو حنیفہ]]
