*Empty MediaWiki Message*

--- a/څلوېښت_حديثونه.mw
+++ b/څلوېښت_حديثونه.mw
@@ -1,3 +1,4 @@
+{{صاف}}
 رسول الله صلى الله عليه وسلم فرمايلي چې : څوك هم زما څلويښت داسې حديثونه ياد كړي چې دهغه په ديني چارو كې په كارراشي نو هغه به عالم ګڼل كيږي , له شهيدانو سره به راپورته كول كيږي ,دقيامت په ورځ به زه پخپله دهغه دايماندارۍ شاهد يم , او دهغه سفارش به كوم , اوورته ويل كيږي به چې : دجنت له كومې دروازې وغواړي نو جنت ته تلای شې . 
 
 #الطهور شطر الايمان . (مسلم) 
