--- a/عبدالرحمن_پژواک.mw
+++ b/عبدالرحمن_پژواک.mw
@@ -1,3 +1,4 @@
+{{صاف}}
 {| align="left" cellpadding="2" cellspacing="0" style="border: 1px solid; margin-left: 1em"
 |+ '''استاد عبدالرحمن پژواک''' 
 ! bgcolor="#efefef" colspan="2" |[[Image:Pazhwak.jpg|">استاد عبدالرحمن پژواک]]
